@@ -20,6 +20,7 @@ import java.util.Arrays;
 import java.util.Random;
 import java.util.concurrent.TimeUnit;
 import org.apache.lucene.search.DocIdSetIterator;
+import org.apache.lucene.util.VectorUtil;
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
 import org.openjdk.jmh.annotations.CompilerControl;
@@ -39,13 +40,19 @@ import org.openjdk.jmh.annotations.Warmup;
 @Warmup(iterations = 5, time = 1)
 @Measurement(iterations = 5, time = 1)
 @Fork(
-    value = 1,
-    jvmArgsAppend = {"-Xmx1g", "-Xms1g", "-XX:+AlwaysPreTouch"})
+    value = 3,
+    jvmArgsAppend = {
+      "-Xmx1g",
+      "-Xms1g",
+      "-XX:+AlwaysPreTouch",
+      "--add-modules",
+      "jdk.incubator.vector"
+    })
 public class AdvanceBenchmark {
 
-  private final long[] values = new long[129];
+  private final int[] values = new int[129];
   private final int[] startIndexes = new int[1_000];
-  private final long[] targets = new long[startIndexes.length];
+  private final int[] targets = new int[startIndexes.length];
 
   @Setup(Level.Trial)
   public void setup() throws Exception {
@@ -68,7 +75,7 @@ public class AdvanceBenchmark {
   }
 
   @CompilerControl(CompilerControl.Mode.DONT_INLINE)
-  private static int binarySearch(long[] values, long target, int startIndex) {
+  private static int binarySearch(int[] values, int target, int startIndex) {
     // Standard binary search
     int i = Arrays.binarySearch(values, startIndex, values.length, target);
     if (i < 0) {
@@ -78,55 +85,15 @@ public class AdvanceBenchmark {
   }
 
   @Benchmark
-  public void binarySearch2() {
-    for (int i = 0; i < startIndexes.length; ++i) {
-      binarySearch2(values, targets[i], startIndexes[i]);
+  public void inlinedBranchlessBinarySearch() {
+    for (int i = 0; i < targets.length; ++i) {
+      inlinedBranchlessBinarySearch(values, targets[i]);
     }
   }
 
   @CompilerControl(CompilerControl.Mode.DONT_INLINE)
-  private static int binarySearch2(long[] values, long target, int startIndex) {
-    // Try to help the compiler by providing predictable start/end offsets.
-    int i = Arrays.binarySearch(values, 0, 128, target);
-    if (i < 0) {
-      i = -1 - i;
-    }
-    return i;
-  }
-
-  @Benchmark
-  public void binarySearch3() {
-    for (int i = 0; i < startIndexes.length; ++i) {
-      binarySearch3(values, targets[i], startIndexes[i]);
-    }
-  }
-
-  @CompilerControl(CompilerControl.Mode.DONT_INLINE)
-  private static int binarySearch3(long[] values, long target, int startIndex) {
-    // Organize code the same way as suggested in https://quickwit.io/blog/search-a-sorted-block,
-    // which proved to help with LLVM.
-    int start = 0;
-    int length = 128;
-
-    while (length > 1) {
-      length /= 2;
-      if (values[start + length - 1] < target) {
-        start += length;
-      }
-    }
-    return start;
-  }
-
-  @Benchmark
-  public void binarySearch4() {
-    for (int i = 0; i < startIndexes.length; ++i) {
-      binarySearch4(values, targets[i], startIndexes[i]);
-    }
-  }
-
-  @CompilerControl(CompilerControl.Mode.DONT_INLINE)
-  private static int binarySearch4(long[] values, long target, int startIndex) {
-    // Explicitly inline the binary-search logic to see if it helps the compiler.
+  private static int inlinedBranchlessBinarySearch(int[] values, int target) {
+    // This compiles to cmov instructions.
     int start = 0;
 
     if (values[63] < target) {
@@ -155,49 +122,6 @@ public class AdvanceBenchmark {
   }
 
   @Benchmark
-  public void binarySearch5() {
-    for (int i = 0; i < startIndexes.length; ++i) {
-      binarySearch5(values, targets[i], startIndexes[i]);
-    }
-  }
-
-  @CompilerControl(CompilerControl.Mode.DONT_INLINE)
-  private static int binarySearch5(long[] values, long target, int startIndex) {
-    // Other way to write a binary search
-    int start = 0;
-
-    for (int shift = 6; shift >= 0; --shift) {
-      int halfRange = 1 << shift;
-      if (values[start + halfRange - 1] < target) {
-        start += halfRange;
-      }
-    }
-
-    return start;
-  }
-
-  @Benchmark
-  public void binarySearch6() {
-    for (int i = 0; i < startIndexes.length; ++i) {
-      binarySearch6(values, targets[i], startIndexes[i]);
-    }
-  }
-
-  @CompilerControl(CompilerControl.Mode.DONT_INLINE)
-  private static int binarySearch6(long[] values, long target, int startIndex) {
-    // Other way to write a binary search
-    int start = 0;
-
-    for (int halfRange = 64; halfRange > 0; halfRange >>= 1) {
-      if (values[start + halfRange - 1] < target) {
-        start += halfRange;
-      }
-    }
-
-    return start;
-  }
-
-  @Benchmark
   public void linearSearch() {
     for (int i = 0; i < startIndexes.length; ++i) {
       linearSearch(values, targets[i], startIndexes[i]);
@@ -205,7 +129,7 @@ public class AdvanceBenchmark {
   }
 
   @CompilerControl(CompilerControl.Mode.DONT_INLINE)
-  private static int linearSearch(long[] values, long target, int startIndex) {
+  private static int linearSearch(int[] values, long target, int startIndex) {
     // Naive linear search.
     for (int i = startIndex; i < values.length; ++i) {
       if (values[i] >= target) {
@@ -216,121 +140,15 @@ public class AdvanceBenchmark {
   }
 
   @Benchmark
-  public void bruteForceSearch() {
+  public void vectorUtilSearch() {
     for (int i = 0; i < startIndexes.length; ++i) {
-      bruteForceSearch(values, targets[i], startIndexes[i]);
+      VectorUtil.findNextGEQ(values, targets[i], startIndexes[i], 128);
     }
   }
 
   @CompilerControl(CompilerControl.Mode.DONT_INLINE)
-  private static int bruteForceSearch(long[] values, long target, int startIndex) {
-    // Linear search with predictable start/end offsets to see if it helps the compiler.
-    for (int i = 0; i < 128; ++i) {
-      if (values[i] >= target) {
-        return i;
-      }
-    }
-    return values.length;
-  }
-
-  @Benchmark
-  public void linearSearch2() {
-    for (int i = 0; i < startIndexes.length; ++i) {
-      linearSearch2(values, targets[i], startIndexes[i]);
-    }
-  }
-
-  @CompilerControl(CompilerControl.Mode.DONT_INLINE)
-  private static int linearSearch2(long[] values, long target, int startIndex) {
-    // Two-level linear search, first checking every 8-th value, then values within an 8-value range
-    int rangeStart = values.length - 8;
-
-    for (int i = startIndex; i + 8 <= values.length; i += 8) {
-      if (values[i + 7] >= target) {
-        rangeStart = i;
-        break;
-      }
-    }
-
-    for (int i = 0; i < 8; ++i) {
-      if (values[rangeStart + i] >= target) {
-        return rangeStart + i;
-      }
-    }
-
-    return values.length;
-  }
-
-  @Benchmark
-  public void linearSearch3() {
-    for (int i = 0; i < startIndexes.length; ++i) {
-      linearSearch3(values, targets[i], startIndexes[i]);
-    }
-  }
-
-  @CompilerControl(CompilerControl.Mode.DONT_INLINE)
-  private static int linearSearch3(long[] values, long target, int startIndex) {
-    // Iteration over linearSearch that tries to reduce branches
-    while (startIndex + 4 <= values.length) {
-      int count = values[startIndex] < target ? 1 : 0;
-      if (values[startIndex + 1] < target) {
-        count++;
-      }
-      if (values[startIndex + 2] < target) {
-        count++;
-      }
-      if (values[startIndex + 3] < target) {
-        count++;
-      }
-      if (count != 4) {
-        return startIndex + count;
-      }
-      startIndex += 4;
-    }
-
-    for (int i = startIndex; i < values.length; ++i) {
-      if (values[i] >= target) {
-        return i;
-      }
-    }
-
-    return values.length;
-  }
-
-  @Benchmark
-  public void hybridSearch() {
-    for (int i = 0; i < startIndexes.length; ++i) {
-      hybridSearch(values, targets[i], startIndexes[i]);
-    }
-  }
-
-  @CompilerControl(CompilerControl.Mode.DONT_INLINE)
-  private static int hybridSearch(long[] values, long target, int startIndex) {
-    // Two-level linear search, first checking every 8-th value, then values within an 8-value range
-    int rangeStart = values.length - 8;
-
-    for (int i = startIndex; i + 8 <= values.length; i += 8) {
-      if (values[i + 7] >= target) {
-        rangeStart = i;
-        break;
-      }
-    }
-
-    return binarySearchHelper8(values, target, rangeStart);
-  }
-
-  // branchless binary search over 8 values
-  private static int binarySearchHelper8(long[] values, long target, int start) {
-    if (values[start + 3] < target) {
-      start += 4;
-    }
-    if (values[start + 1] < target) {
-      start += 2;
-    }
-    if (values[start] < target) {
-      start += 1;
-    }
-    return start;
+  private static int vectorUtilSearch(int[] values, int target, int startIndex) {
+    return VectorUtil.findNextGEQ(values, target, startIndex, 128);
   }
 
   private static void assertEquals(int expected, int actual) {
@@ -341,7 +159,7 @@ public class AdvanceBenchmark {
 
   public static void main(String[] args) {
     // For testing purposes
-    long[] values = new long[129];
+    int[] values = new int[129];
     for (int i = 0; i < 128; ++i) {
       values[i] = i;
     }
@@ -350,25 +168,11 @@ public class AdvanceBenchmark {
       for (int targetIndex = start; targetIndex < 128; ++targetIndex) {
         int actualIndex = binarySearch(values, values[targetIndex], start);
         assertEquals(targetIndex, actualIndex);
-        actualIndex = binarySearch2(values, values[targetIndex], start);
-        assertEquals(targetIndex, actualIndex);
-        actualIndex = binarySearch3(values, values[targetIndex], start);
-        assertEquals(targetIndex, actualIndex);
-        actualIndex = binarySearch4(values, values[targetIndex], start);
-        assertEquals(targetIndex, actualIndex);
-        actualIndex = binarySearch5(values, values[targetIndex], start);
-        assertEquals(targetIndex, actualIndex);
-        actualIndex = binarySearch6(values, values[targetIndex], start);
-        assertEquals(targetIndex, actualIndex);
-        actualIndex = bruteForceSearch(values, values[targetIndex], start);
-        assertEquals(targetIndex, actualIndex);
-        actualIndex = hybridSearch(values, values[targetIndex], start);
+        actualIndex = inlinedBranchlessBinarySearch(values, values[targetIndex]);
         assertEquals(targetIndex, actualIndex);
         actualIndex = linearSearch(values, values[targetIndex], start);
         assertEquals(targetIndex, actualIndex);
-        actualIndex = linearSearch2(values, values[targetIndex], start);
-        assertEquals(targetIndex, actualIndex);
-        actualIndex = linearSearch3(values, values[targetIndex], start);
+        actualIndex = vectorUtilSearch(values, values[targetIndex], start);
         assertEquals(targetIndex, actualIndex);
       }
     }
